Fixed the display of the title of the pages on tablets, fixed the slider over the years on the mission page

--- a/src/assets/styles/modules/_new.scss
+++ b/src/assets/styles/modules/_new.scss
@@ -434,3 +434,33 @@
 .display-flex {
   display: flex;
 }
+
+// Преобразование спойлера с меню в заголовок на планшетах
+
+.page-title-hidden {
+  @media (max-width: $breakpoint - 1px) {
+      display: none;
+  }
+
+  @media (max-width: $breakpoint-m - 1px) {
+      display: block;
+  }
+}
+
+.spoiler-to-title.mission__spoiler {
+  @media (max-width: $breakpoint - 1px) {
+      border-bottom: 1px solid $color-main;
+
+      .mission__spoiler-title {
+          font-size: 22px;
+      }
+  }
+
+  @media (max-width: $breakpoint-m - 1px) {
+      border-bottom: 1px solid $color-gray-border;
+
+      .mission__spoiler-title {
+          font-size: 16px;
+      }
+  }
+}
