--- a/src/assets/styles/pages/mission.scss
+++ b/src/assets/styles/pages/mission.scss
@@ -467,6 +467,7 @@
       margin-left: 0; // ???
       // width: 60%;
       overflow: hidden;
+      padding-bottom: 10px;
     }
 
     .swiper-wrapper { // ?
